# WetwareComputing

./: .gitignore  README.md
dlp/: Makefile  dlp.cpp  dlp.hpp  main.cpp  mea_pattern.cpp  mea_pattern.hpp
mid/: README.md  meson.build  mid.c  mid.h  sigtrap.c  sigtrap.h  util.c  util.h
mid/src/: CMakeLists.txt  electrode.cpp  electrode.hpp  main.cpp  req.cpp  req.hpp  signal_handler.cpp  signal_handler.hpp  sub.cpp  sub.hpp  time_utils.cpp  time_utils.hpp  utils.cpp  utils.hpp
sdc/: README.md  sdc.c  sdc.h  sigtrap.c  sigtrap.h  util.c  util.h
